force-app/main/default/objects/Credit_Information__c/Credit_Information__c.object-meta.xml
<CustomObject>
    <description>Contains information maintained by the Credit Dept</description>
    <label>Credit Information</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Credit Information Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>