force-app/main/default/objects/Credit_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Related Account name stored as an Id</description>
    <inlineHelpText>Account Name</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Information</relationshipLabel>
    <relationshipName>Credit_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>