force-app/main/default/objects/Credit_Information__c/fields/Bankruptcy_Alert__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Alert__c</fullName>
    <description>BankruptcyAlert Flag (red flag image) makes it easily visible when the account is in Bankruptcy</description>
    <formula>if(
   Filed_for_Bankruptcy__c  = true, IMAGE( &quot;/img/samples/flag_yellow.gif&quot;, &quot;Red Flag&quot;, 20, 20), null
)</formula>
    <inlineHelpText>Bankruptcy Flag</inlineHelpText>
    <label>Bankruptcy Alert</label>
    <type>Text</type>
</CustomField>