force-app/main/default/objects/Credit_Information__c/fields/Filed_for_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Filed_for_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an account has filed for bankruptcy</description>
    <inlineHelpText>Indicates that an account has filed for bankruptcy</inlineHelpText>
    <label>Filed for Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>