force-app/main/default/objects/Credit_Information__c/fields/Pre_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Collection_Status__c</fullName>
    <description>Account in pre-collection status displays as a red flag</description>
    <formula>if(
    Pre_Collection_Status_Active__c  = true, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;, 20, 20), null
)</formula>
    <inlineHelpText>Account is in pre-collection status</inlineHelpText>
    <label>Pre-Collection Status</label>
    <type>Text</type>
</CustomField>