force-app/main/default/objects/Credit_Information__c/fields/Pre_Collection_Status_Active__c.field-meta.xml
<CustomField>
    <fullName>Pre_Collection_Status_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit is the only team that has access to this checkbox; activates red flag on the account record for Sales only. Customer Call Center cannot see the flag or the checkbox.</description>
    <label>Pre-Collection Status Active</label>
    <type>Checkbox</type>
</CustomField>