force-app/main/default/objects/Credit_Information__c/fields/Pre_Collection_Status_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Collection_Status_Instructions__c</fullName>
    <description>Instructions regarding the pre-collections status on the account</description>
    <inlineHelpText>Instructions regarding the pre-collections status on the account</inlineHelpText>
    <label>Pre-Collection Status Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>