force-app/main/default/objects/Credit_Information__c/fields/Type_of_Bankruptcy_Filed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Bankruptcy_Filed__c</fullName>
    <description>When an customer has filed for bankruptcy, this is the type of bankruptcy</description>
    <inlineHelpText>This is the type of bankruptcy</inlineHelpText>
    <label>Type of Bankruptcy Filed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chapter 7</fullName>
            </value>
            <value>
                <fullName>Chapter 11</fullName>
            </value>
            <value>
                <fullName>Chapter 11 Prepackaged</fullName>
            </value>
            <value>
                <fullName>Chapter 13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>