force-app/main/default/objects/Credit_Information__c/fields/X3rd_Party_Collection_Notes__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Collection_Notes__c</fullName>
    <description>Notes regarding collection and pre-collection. May be notes regarding communication from 3rd Party</description>
    <inlineHelpText>Notes regarding collection and pre-collection.</inlineHelpText>
    <label>3rd Party Collection Notes</label>
    <type>TextArea</type>
</CustomField>