force-app/main/default/objects/Credit_Information__c/fields/X3rd_Party_Status__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Status__c</fullName>
    <description>3rd Party Status of the collection</description>
    <inlineHelpText>3rd Party Collection Status</inlineHelpText>
    <label>3rd Party Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Collection</fullName>
            </value>
            <value>
                <fullName>Atradius</fullName>
            </value>
            <value>
                <fullName>Biorn Corporation</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>